--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Bain et Cuisine - Votre Spécialiste Salle de Bain et Cuisine</title>
+  <title>Cabine de Douche - Votre spécialiste Cabine de Douche</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Découvrez nos collections de cabines de douche, meubles, et accessoires pour la salle de bain et la cuisine.">
-  <meta name="keywords" content="salle de bain, cuisine, cabine de douche, robinetterie, meubles">
+  <meta name="description" content="Découvrez nos collections de cabines de douche, meubles, et accessoires pour la salle de bain.">
+  <meta name="keywords" content="salle de bain, cabine de douche, robinetterie, meubles">
 
   <!-- Favicons -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
